syntax = "proto3";

service User {
    rpc GetMoviesPerRating(Empty) returns (AllMovies) {}
    rpc GetMovieAtDate(Date) returns (Schedule) {}
    rpc BookMovie(BookingRequest) returns (Status) {}
    rpc GetBookingForUser(UserIdB) returns (BookingsUserB) {}
}

message AllMovies {
    repeated Movie movies = 1;
}

message Movie {
    string id = 1;
    string title = 2;
    float rating = 3;
}

message Date {
    string date = 1;
}

message Schedule {
    string date = 1;
    repeated Movie movies = 2;
}

message BookingRequest {
    string movieid = 1;
    string date = 2;
    string username =3;
}

message Status {
    string booking_status = 1;
}

message UserIdB {
    string id = 1;
}

message BookingsUserB {
    string userid = 1;
    repeated DateItemB dates = 2;
}

message DateItemB {
    string date = 1;
    repeated string movies = 2;
}

message Empty {}
